prevent tesitmonial image from being cut off.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -839,14 +839,13 @@ a {
 
   .slick-dots {
     margin-top: 0;
-    // padding-bottom: 6px;
   }
 
   .review-slideshow {
-    padding: 28px 14px;
+    padding: 28px 12px;
     .inner {
       img {
-        margin-top: 0;
+        margin-top: 3px;;
         max-width: 35%;
       }
       p {
